# chess

./: Anchor.toml  Cargo.toml  package-lock.json
client/: .Cargo.toml.swp
client/src/: main.rs  utils.rs
client/src/contexts/: deposit.rs  initialize_game.rs  initialize_user.rs  join_game.rs  leave_game.rs  mod.rs  move_piece.rs  resign.rs  withdraw.rs
programs/chess/: Cargo.toml
programs/chess/src/: error.rs  lib.rs
programs/chess/src/contexts/: clockwork_check_timer.rs  deposit.rs  initialize_game.rs  initialize_user.rs  join_game.rs  leave_game.rs  mod.rs  move_piece.rs  offer_draw.rs  resign.rs  withdraw.rs
programs/chess/src/models/: board.rs  castling_right.rs  color.rs  draw_state.rs  game_config.rs  game_state.rs  mod.rs  piece.rs  square.rs  time_control.rs
programs/chess/src/states/: game.rs
tests/: chess.ts
