[package]
name = "chess_root"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chess_root"
path = "programs/chess/src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
clockwork-sdk = "2.0.1" 
solana-program = "1.17.6"  # Updated to a higher version compatible with anchor-lang

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[workspace]
members = [
    "programs/*",
    "client",
]

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
